--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,4 +4,6 @@
     border-top: 1px solid rgba(255,255,255,0.1);
     color: var(--text-secondary);
     font-size: 0.8rem;
+    margin-top: 20px;
+    background-color: rgb(0, 0, 0);
 }
