--- a/src/css/base.css
+++ b/src/css/base.css
@@ -27,8 +27,8 @@ body {
 }
 
 .container {
-  background: linear-gradient(45deg, #0f172ad3 0%, #0f172ae9 100%);
-  border-radius: 12px;
+  background: linear-gradient(45deg, #1E2330 0%, #161c2af0 100%);
+  border-radius: 8px;
   width: min(1500px, 90%);
   margin: 0 auto;
   margin-top: 20px;
@@ -37,7 +37,8 @@ body {
 
 .header-block {
   color: rgb(238, 238, 238);
-  background: linear-gradient(45deg, #162033 0%, #162033d2 100%);
+  background: linear-gradient(45deg, #1e2330d8 0%, #161c2a64 100%);
+
   line-height: 1.2;
   padding: 8px 30px;
 
