--- a/src/css/details.css
+++ b/src/css/details.css
@@ -1,247 +1,249 @@
- 
-/* =========================
+ /* =========================
    LAYOUT
    ========================= */
 
-.split-view {
-  display: grid;
-  grid-template-columns: 1fr 400px;
-  padding: 24px;
-  gap: 4rem;
-  align-items: center;
- 
-}
+ .split-view {
+   display: grid;
+   grid-template-columns: 1fr 400px;
+   padding: 24px;
+   gap: 4rem;
+   align-items: center;
 
-/* =========================
+ }
+
+ /* =========================
    LEFT CONTENT
    ========================= */
 
-.content-block {
-  display: grid;
-  gap: 20px;
-}
+ .content-block {
+   display: grid;
+   gap: 20px;
+ }
 
-.content-block p {
-  margin-bottom: 18px;
-  font-size: 0.9rem;
-  line-height: 1.7;
-  color: var(--text-secondary);
-}
+ .content-block p {
+   margin-bottom: 18px;
+   font-size: 0.9rem;
+   line-height: 1.7;
+   color: var(--text-secondary);
+ }
 
-.content-block ul {
-  list-style: none;
-  padding-left: 0;
-}
+ .content-block ul {
+   list-style: none;
+   padding-left: 0;
+ }
 
-.content-block li {
-  margin-bottom: 10px;
-  color: var(--text-secondary);
-}
+ .content-block li {
+   margin-bottom: 10px;
+   color: var(--text-secondary);
+ }
 
-.content-block .bold-white {
-  font-weight: 600;
-  font-size: 1.1rem;
-  color: white;
-}
+ .content-block .bold-white {
+   font-weight: 600;
+   font-size: 1.1rem;
+   color: white;
+ }
 
-.block {
-  border: 1px solid rgb(49, 49, 49);
-  padding: 20px;
-  border-radius: 12px;
-  background: linear-gradient(-45deg, #0c0c0c98 0%, #42424278 100%);
+ .block {
+   border: 1px solid rgb(49, 49, 49);
+   padding: 20px;
+   border-radius: 12px;
+   background: linear-gradient(-45deg, #151922 0%, #151922df 100%);
 
-  & ul {
-    margin-left: 10px;
-    line-height: 1.5;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 10px;
-  }
+   & ul {
+     margin-left: 10px;
+     line-height: 1.5;
+     display: grid;
+     grid-template-columns: 1fr 1fr;
+     column-gap: 10px;
+   }
 
-  & ul li {
-    font-size: 0.8rem;
-    line-height: 1.4;
-    padding: 10px;
-    border: none;
-    background: linear-gradient(45deg, #00000075 0%, #0f0f0f4c 100%);
-    color: white;
-    border-radius: 6px;
-  }
-}
+   & ul li {
+     font-size: 0.8rem;
+     line-height: 1.4;
+     padding: 10px;
+     border: none;
+     background: linear-gradient(45deg, #171D2D 0%, #202839 100%);
+     color: white;
+     border-radius: 6px;
+   }
+ }
 
-.document-content {
-  border: 1px solid rgba(255, 255, 255, 0.08);
-  border-radius: 8px;
-  overflow: hidden;
-}
+ .document-content {
+   border: 1px solid rgba(255, 255, 255, 0.08);
+   border-radius: 8px;
+   overflow: hidden;
+ }
 
-.document-content .document-header,
-.doc-row-all-download {
-  background-color: #1a1a1a;
-  padding: 20px;
-}
+ .document-content .document-header,
+ .doc-row-all-download {
+   background-color: #1e293b;
+   padding: 20px;
+ }
 
-.doc-row-all-download {
-  padding: 13px;
-}
+ .doc-row-all-download {
+   padding: 13px;
+ }
 
-.doc-row-all {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 8px;
-  border-radius: 6px;
-  cursor: pointer;
-  box-shadow: 0 4px 0 0 rgba(79, 79, 79, 0.856);
-  transition:
-    background 0.2s ease,
-    border-color 0.2s ease;
+ .doc-row-all {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   padding: 8px;
+   border-radius: 6px;
+   cursor: pointer;
+   box-shadow: 0 4px 0 0 rgba(79, 79, 79, 0.856);
+   transition:
+     background 0.2s ease,
+     border-color 0.2s ease;
 
-  &:hover {
-    background: rgba(255, 255, 255, 0.08);
-    border-color: var(--accent-hover);
-    color: white;
-  }
-}
+   &:hover {
+     background: rgba(255, 255, 255, 0.08);
+     border-color: var(--accent-hover);
+     color: white;
+   }
+ }
 
-/* =========================
+ /* =========================
    RIGHT PANEL
    ========================= */
 
-.document-list {
-  background: var(--card-bg);
-  padding: 8px;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  max-height: 70svh;
-  overflow-y: auto;
-  scrollbar-width: thin;
-  scrollbar-color: rgba(255, 255, 255, 0.1) transparent;
+ .document-list {
+   background: var(--card-bg);
+   padding: 8px;
+   display: flex;
+   flex-direction: column;
+   gap: 8px;
+   max-height: 70svh;
+   overflow-y: auto;
+   scrollbar-width: thin;
+   scrollbar-color: rgba(255, 255, 255, 0.1) transparent;
 
-  &::-webkit-scrollbar {
-    width: 5px;
-  }
+   &::-webkit-scrollbar {
+     width: 5px;
+   }
 
-  &::-webkit-scrollbar-track {
-    background: transparent;
-  }
+   &::-webkit-scrollbar-track {
+     background: transparent;
+   }
 
-  &::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 10px;
-  }
+   &::-webkit-scrollbar-thumb {
+     background: rgba(255, 255, 255, 0.1);
+     border-radius: 10px;
+   }
 
-  &::-webkit-scrollbar-thumb:hover {
-    background: rgba(255, 255, 255, 0.2);
-  }
-}
+   &::-webkit-scrollbar-thumb:hover {
+     background: rgba(255, 255, 255, 0.2);
+   }
+ }
 
-/* =========================
+ /* =========================
    DOCUMENT ITEM
    ========================= */
 
-.doc-row {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
+ .doc-row {
+   display: flex;
+   align-items: center;
+   gap: 10px;
+ }
 
-.doc-item {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 5px 10px;
-  flex: 1;
-  background: #131313;
-  border: 1px solid rgba(255, 255, 255, 0.08);
-  color: var(--text-primary);
+ .doc-item {
+   position: relative;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   padding: 5px 10px;
+   flex: 1;
+   background: #181D2A;
+   border: 1px solid rgba(255, 255, 255, 0.08);
+   color: var(--text-primary);
 
-  border-radius: 6px;
-  cursor: pointer;
-  transition:
-    background 0.2s ease,
-    border-color 0.2s ease;
-  text-align: left;
-}
+   border-radius: 6px;
+   cursor: pointer;
+   transition:
+     background 0.2s ease,
+     border-color 0.2s ease;
+   text-align: left;
+ }
 
-.doc-item::after {
-  content: "👁 Դիտել";
-  position: absolute;
-  right: 66px;
-  top: 50%;
-  transform: translateY(-50%) translateX(10px);
-  opacity: 0;
-  font-size: 0.85em;
-  color: var(--accent-hover);
-  transition:
-    opacity 0.3s ease,
-    transform 0.3s ease;
-  pointer-events: none;
-}
+ .doc-item::after {
+   content: "👁 Դիտել";
+   position: absolute;
+   right: 66px;
+   top: 50%;
+   transform: translateY(-50%) translateX(10px);
+   opacity: 0;
+   font-size: 0.85em;
+   color: var(--accent-hover);
+   transition:
+     opacity 0.3s ease,
+     transform 0.3s ease;
+   pointer-events: none;
+ }
 
-.doc-item:hover::after {
-  opacity: 1;
-  transform: translateY(-50%) translateX(0);
-}
+ .doc-item:hover::after {
+   opacity: 1;
+   transform: translateY(-50%) translateX(0);
+ }
 
-.doc-item:hover {
-  background: rgba(255, 255, 255, 0.08);
-  border-color: var(--accent-hover);
-}
+ .doc-item:hover {
+   background: rgba(255, 255, 255, 0.08);
+   border-color: var(--accent-hover);
+ }
 
-.doc-download {
-  width: 42px;
-  height: 42px;
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: var(--text-secondary);
-  transition:
-    background 0.2s ease,
-    color 0.2s ease;
-}
+ .doc-download {
+   width: 42px;
+   height: 42px;
+   border-radius: 8px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   color: var(--text-secondary);
+   transition:
+     background 0.2s ease,
+     color 0.2s ease;
+ }
 
-.doc-download:hover {
-  background: rgba(255, 255, 255, 0.08);
-  color: var(--accent-hover);
-}
+ .doc-download:hover {
+   background: rgba(255, 255, 255, 0.08);
+   color: var(--accent-hover);
+ }
 
-.info-block {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
+ .info-block {
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+ }
 
-.download-btns {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+ .download-btns {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
 
-.doc-row svg {
-  width: 36px;
-  height: 36px;
-  padding: 8px;
-  border: 1px solid rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-  transition: all 0.3s ease;
-  cursor: pointer;
-  color: rgba(255, 255, 255, 0.611);
+ .doc-row svg {
+   width: 36px;
+   height: 36px;
+   padding: 8px;
+   border: 1px solid rgba(255, 255, 255, 0.1);
+   border-radius: 50%;
+   transition: all 0.3s ease;
+   cursor: pointer;
+   color: rgba(255, 255, 255, 0.611);
 
-  &:hover {
-    background: rgba(255, 255, 255, 0.08);
-    border-color: var(--accent-hover);
-    color: white;
-  }
-}
+   &:hover {
+     background: rgba(255, 255, 255, 0.08);
+     border-color: var(--accent-hover);
+     color: white;
+   }
+ }
 
 
 
-.left-shadow {
-  box-shadow: -7px 0 0 rgba(204, 204, 204, 0.445);
-  margin-left: 7px;
-  padding-left: 10px;
-}
+ .left-shadow {
+   background: linear-gradient(-45deg, #151922 0%, #151922df 100%);
+   box-shadow: -7px 0 0 rgba(204, 204, 204, 0.445);
+   margin-left: 7px;
+   border-radius: 0 6px 6px 0;
+   padding: 5px 0;
+   padding-left: 10px;
+ }
