--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,8 +1,7 @@
 :root {
     font-size: clamp(15px, 1.1vw, 18px);
-
     --bg-color: #000000;
-    --card-bg: #080808d2;
+    --card-bg: #151922;
     --text-primary: #ffffff;
     --text-secondary: #d5d5d5;
     --accent-gold: #82690fb7;
