--- a/src/css/details.css
+++ b/src/css/details.css
@@ -17,7 +17,7 @@
 
  .content-block {
    display: grid;
-   gap: 20px;
+   gap: 10px;
  }
 
  .content-block p {
@@ -47,10 +47,10 @@
    border: 1px solid rgb(49, 49, 49);
    padding: 20px;
    border-radius: 12px;
-   background: linear-gradient(-45deg, #151922 0%, #151922df 100%);
+   background: linear-gradient(-45deg, #222b4045 0%, #15192251 100%);
+   border: none;
 
    & ul {
-     margin-left: 10px;
      line-height: 1.5;
      display: grid;
      grid-template-columns: 1fr 1fr;
@@ -62,7 +62,7 @@
      line-height: 1.4;
      padding: 10px;
      border: none;
-     background: linear-gradient(45deg, #171D2D 0%, #202839 100%);
+     background: linear-gradient(180deg, #222b4045 0%, #15192249 100%);
      color: white;
      border-radius: 6px;
    }
@@ -76,7 +76,7 @@
 
  .document-content .document-header,
  .doc-row-all-download {
-   background-color: #1e293b;
+   background: linear-gradient(-45deg, #222b4092 0%, #151922a4 100%);
    padding: 20px;
  }
 
@@ -91,7 +91,7 @@
    padding: 8px;
    border-radius: 6px;
    cursor: pointer;
-   box-shadow: 0 4px 0 0 rgba(79, 79, 79, 0.856);
+   box-shadow: 0 4px 0 0 #181D2A;
    transition:
      background 0.2s ease,
      border-color 0.2s ease;
@@ -99,6 +99,7 @@
    &:hover {
      background: rgba(255, 255, 255, 0.08);
      border-color: var(--accent-hover);
+     box-shadow: 0 4px 0 0 #1b2d65;
      color: white;
    }
  }
@@ -240,8 +241,8 @@
 
 
  .left-shadow {
-   background: linear-gradient(-45deg, #151922 0%, #151922df 100%);
-   box-shadow: -7px 0 0 rgba(204, 204, 204, 0.445);
+   background: linear-gradient(-45deg, #222b4045 0%, #15192251 100%);
+   box-shadow: -7px 0 0 rgba(255, 255, 255, 0.904);
    margin-left: 7px;
    border-radius: 0 6px 6px 0;
    padding: 5px 0;
