--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -7,9 +7,23 @@
   left: 0;
   width: 100%;
   z-index: 2000;
-  padding: .5rem 4.5rem;
-  background: rgb(255, 255, 255);
-  transition: transform 0.35s ease;
+
+  padding: 0.5rem 4.5rem;
+
+  background: linear-gradient(135deg, #ffffff00 0%, #ffffff00 50%, #ffffff 100%);
+
+  transition:
+    background-color 0.3s ease,
+}
+
+.main-header.scrolled {
+  background: #ffffff;
+
+  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.08);
+
+  & .main-header__nav a {
+    color: #000000;
+  }
 }
 
 .main-header--hidden {
