--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -16,7 +16,7 @@
     width: 90%;
     height: 90%;
     background: #fff;
-    color: #000;
+    color: #000000;
     display: flex;
     flex-direction: column;
 }
@@ -36,7 +36,7 @@
 
 .btn-action {
     text-decoration: none;
-    background: #000;
+    background: #000000b1;
     color: #fff;
     padding: 8px 18px;
     border-radius: 4px;
@@ -44,7 +44,8 @@
 }
 
 .btn-close {
-    background: #000000;
+    background: #000000b1;
+
     color: #fff;
     border: none;
     padding: 8px 18px;
