add paddin to doc item > bottom

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -25,7 +25,7 @@
 
  .caption-bg {
    backdrop-filter: blur(6px);
-   background:#1e293bda;
+   background: #1e293bda;
    padding: 10px;
 
    & .doc-item {
@@ -46,6 +46,7 @@
      display: flex;
      align-items: center;
      justify-content: start;
+     padding: 10px;
    }
 
    & .doc-item svg {
@@ -61,7 +62,7 @@
  .component-image-wrapper {
    position: relative;
    border: 1px solid rgba(255, 255, 255, 0.08);
-   border:none;
+   border: none;
    background-color: var(--card-bg);
    border-radius: 6px 6px 0 0;
 
