--- a/src/css/components.css
+++ b/src/css/components.css
@@ -25,7 +25,7 @@
 
  .caption-bg {
    backdrop-filter: blur(6px);
-   background: #1e293bda;
+   background: linear-gradient(180deg, #25324296 0%, #161c2aaa 100%);
    padding: 10px;
 
    & .doc-item {
