--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -2,7 +2,7 @@
     font-size: clamp(15px, 1.1vw, 18px);
     --card-bg: #151922b9;
     --text-primary: #ffffff;
-    --text-secondary: #ffffffd0;
+    --text-secondary: #ffffff;
     --accent-gold: #031e5eb7;
     --accent-hover: #DADBEF;
     --font-main: 'Noto Sans Armenian', sans-serif;
