--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -64,6 +64,7 @@
     .hero-logo img {
         width: 150px;
     }
+  
 
     .hero-title {
         font-size: 1.4rem;
@@ -169,6 +170,7 @@
 @media (max-width: 992px) {
     .component-display {
         max-width: 90%;
+    
     }
 }
 
@@ -182,6 +184,12 @@
     .main-plan-img {
         height: 300px;
     }
+   .gallery-arrow{
+    display: none;
+   }
+   .gallery-wrapper{
+    padding: 10px 0;
+   }
 }
 
 @media (max-width: 480px) {
