--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -53,35 +53,73 @@
    HERO SECTION
    ============================================ */
 
-@media (max-width: 992px) {
-    .hero-title {
-        font-size: 2rem;
-        letter-spacing: 10px;
+ 
+@media (max-width: 1024px) {
+    .hero-section{
+        background-size: cover;
+        background-position: right bottom;
     }
+  .hero-title {
+    font-size: 1.8rem;
+    width: 45vw; 
+  }
+  
+  .hero-logo {
+    width: 220px;
+  }
 }
 
-@media (max-width: 600px) {
-    .hero-logo img {
-        width: 150px;
-    }
-  
+ 
+@media (max-width: 768px) {
+  .hero-section {
+    min-height: 50vh;
+  }
 
-    .hero-title {
-        font-size: 1.4rem;
-    }
+ 
+  .hero-section::before {
+    clip-path: polygon(0 0, 60% 0, 55% 100%, 0 100%);
+  }
 
-    .hero-content {
-        display: flex;
-        flex-direction: column;
-    }
+  .hero-title {
+    font-size: 1.5rem;
+    width: 55vw;
+  }
 
-    .hero-subtitle {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-    }
+  .hero-logo {
+    width: 180px;
+  }
+}
+
+ 
+@media (max-width: 480px) {
+  .hero-section {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 500px;
+    text-align: center;
+  }
+
+  .hero-section::before {
+    clip-path: none; 
+    background: rgba(255, 255, 255, 0.85); 
+  }
+
+  .hero-content {
+    align-items: center; 
+    width: 100%;
+  }
+
+  .hero-title {
+    width: 90vw;  
+    font-size: 1.4rem;
+    padding: 20px;
+  }
+
+  .hero-logo {
+    width: 150px;
+    margin-bottom: 20px;
+  }
 }
 
 /* ============================================
