feat(mobile): update document links and implement responsive CSS styles

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -5,6 +5,7 @@
 /* ============================================
    NAVBAR / HEADER
    ============================================ */
+ 
 
 @media (max-width: 992px) {
     .main-header {
@@ -18,6 +19,11 @@
     .burger-btn {
         display: flex;
     }
+
+    #documents {
+        scroll-margin-top: 10vh;
+    }
+
 }
 
 @media (max-width: 600px) {
