--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -10,6 +10,7 @@
 @media (max-width: 992px) {
     .main-header {
         padding: 0.8rem 2rem;
+        background-color: white;
     }
 
     .main-header__nav {
