--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -5,7 +5,7 @@
 /* ============================================
    NAVBAR / HEADER
    ============================================ */
- 
+
 
 @media (max-width: 992px) {
     .main-header {
@@ -116,9 +116,12 @@
         align-items: center;
         min-height: 500px;
         text-align: center;
-        
+
     }
-   .main-header {
+
+ 
+
+    .main-header {
         background-color: white;
     }
 
@@ -141,6 +144,9 @@
     .hero-logo {
         width: 150px;
         margin-bottom: 20px;
+    }
+    .hero-section.dark-mode::before {
+        background: rgba(246, 246, 246, 0.879) !important ;
     }
 }
 
