--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -10,7 +10,7 @@
 
   padding: 0.5rem 4.5rem;
 
-  background: linear-gradient(135deg, #ffffff00 0%, #ffffff00 30%, #ffffff 50%, #ffffff 70%, #ffffff 100%);
+  background: linear-gradient(135deg, #ffffff00 0%, #ffffff00 30%,#ffffff00 40%,#ffffff 45%, #ffffff 50%, #ffffff 70%, #ffffff 100%);
 
   transition:
     background-color 0.3s ease,
