--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -119,7 +119,7 @@
 
     }
 
- 
+
 
     .main-header {
         background-color: white;
@@ -145,8 +145,9 @@
         width: 150px;
         margin-bottom: 20px;
     }
+
     .hero-section.dark-mode::before {
-        background: rgba(246, 246, 246, 0.879) !important ;
+        background: rgba(246, 246, 246, 0.879) !important;
     }
 }
 
@@ -157,6 +158,7 @@
 @media (max-width: 1080px) {
     .split-view {
         grid-template-columns: 1fr;
+        padding: 10px;
     }
 
     .block {
@@ -186,15 +188,20 @@
    ============================================ */
 
 @media (max-width: 992px) {
+    .valuation-content {
+        padding: 10px;
+    }
+
     .price-value {
         font-size: 1.8rem;
+
     }
 }
 
 @media (max-width: 600px) {
     .price-box {
-        padding: 20px;
-        flex-direction: column;
+        padding: 10px;
+        text-align: center;
     }
 
     .valuation-images {
@@ -248,8 +255,7 @@
 
 @media (max-width: 992px) {
     .component-display {
-        max-width: 90%;
-
+        padding: 10px;
     }
 }
 
@@ -276,7 +282,6 @@
 @media (max-width: 480px) {
     .component-display {
         gap: 24px;
-        padding: 0;
     }
 
     .main-plan-img {
