Fix gallery bugs, add large images and zoom in/out support

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -27,6 +27,10 @@
   transform: translateY(-100%);
 }
 
+.main-header--hidden .mobile-menu {
+  transform: translateY(-100%);
+}
+
 .main-header__inner {
   display: flex;
   justify-content: space-between;
