--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -113,10 +113,12 @@
   transition: top 0.35s ease;
   z-index: 2400;
   border-radius: 0 0 0 9px;
+  opacity: 0;
 }
 
 .mobile-menu.open {
   top: 0;
+  opacity: 1;
 }
 
 .mobile-menu ul {
